--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -62,7 +62,7 @@
         - name: record source table data
           ansible.builtin.set_fact:
             pagila_all_tables: "{{ _table_names | list }}"
-            pagila_target_tables: "{{ _table_names | reject('regex', '^payment_.*') }}"
+            pagila_target_tables: "{{ _table_names | reject('regex', '^payment_.*') | reject('regex', '^staff') }}"
           vars:
             _table_names: "{{ pagila_table_query.query_result | map(attribute='table_name') }}"
 
@@ -123,7 +123,9 @@
               register: warehouse_table_query
               retries: 20
               delay: 30
-              until: warehouse_tables_expected | difference(warehouse_tables_found) | length == 0
+              until:
+                - warehouse_tables_expected | difference(warehouse_tables_found) | length == 0
+                - warehouse_tables_found | difference(warehouse_tables_expected) | length == 0
 
           rescue:
             - name: debug table mismatches
@@ -132,7 +134,9 @@
               vars:
                 warehouse_tables_expected: "{{ pagila_target_tables| map('map_format', 'pagila_%s') | list }}"
                 warehouse_tables_found: "{{ warehouse_table_query.query_result | map(attribute='table_name') | list }}"
-                warehouse_tables_diff: "{{ warehouse_tables_expected | difference(warehouse_tables_found) }}"
+                warehouse_tables_diff_expected: "{{ warehouse_tables_expected | difference(warehouse_tables_found) }}"
+                warehouse_tables_diff_found: "{{ warehouse_tables_found | difference(warehouse_tables_expected) }}"
+                warehouse_tables_diff: "{{ warehouse_tables_diff_expected + warehouse_tables_diff_found }}"
 
             - name: fail verification
               ansible.builtin.fail:
