Refactor minimal values example

--- a/values.minimal.yml
+++ b/values.minimal.yml
@@ -10,10 +10,13 @@ metabase:
 cdc:
   postgres:
     - hostname: pagilahost
-      port: 5432
       id: pagila
       dbname: pagila
-      signaling: True
+      exclude:
+        - "public.staff"
+      partitions:
+        - source: "public.payment.*"
+          sink: "payment"
 strimzi:
   connect:
     secret: "metabase-pagila-db"
