--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -1,28 +1,29 @@
-{{- $fullName := include "dataplane.strimzi.connect.fullname" . -}}
-{{- $registryName := include "dataplane.registry.fullname" . -}}
-{{- $registryPort := .Values.registry.service.port -}}
+{{- $fullName := include "dataplane.strimzi.connect.fullname" . }}
+{{- $registryName := include "dataplane.registry.fullname" . }}
+{{- $registryPort := .Values.registry.service.port }}
 
-{{- range $db := .Values.cdc.postgres -}}
-{{-   $dbId := required "database id is required" $db.id -}}
-{{-   $dbConnectorName := lower (printf "%s-%s-%s" $fullName $dbId $db.dbname) -}}
-{{-   $dbSlotName := $dbConnectorName | replace "-" "_" -}}
-{{-   $exclude := list -}}
+{{- range $db := .Values.cdc.postgres }}
+{{-   $dbId := required "database id is required" $db.id }}
+{{-   $dbConnectorName := lower (printf "%s-%s-%s" $fullName $dbId $db.dbname) }}
+{{-   $dbSlotName := $dbConnectorName | replace "-" "_" }}
+{{-   $exclude := list }}
 
-{{-   if hasKey $db "exclude" -}}
-{{-     if ge (len $db.exclude) 1 -}}
-{{-       range $item := $db.exclude -}}
-{{-         $exclude = append $exclude $item -}}
-{{-       end -}}
-{{-     end -}}
-{{-   end -}}
+{{-   if hasKey $db "exclude" }}
+{{-     if ge (len $db.exclude) 1 }}
+{{-       range $item := $db.exclude }}
+{{-         $exclude = append $exclude $item }}
+{{-       end }}
+{{-     end }}
+{{-   end }}
 
-{{-   if hasKey $db "partitions" -}}
-{{-     if ge (len $db.partitions) 1 -}}
-{{-       range $item := $db.partitions -}}
-{{-         $exclude = append $exclude $item.source -}}
-{{-       end -}}
-{{-     end -}}
-{{-   end -}}
+{{-   if hasKey $db "partitions" }}
+{{-     if ge (len $db.partitions) 1 }}
+{{-       range $item := $db.partitions }}
+{{-         $exclude = append $exclude $item.source }}
+{{-       end }}
+{{-     end }}
+{{-   end }}
+
 ---
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaConnector
@@ -59,13 +60,13 @@ spec:
     transforms.reroute.topic.regex: (.*)
     transforms.reroute.topic.replacement: cdc.$1
 
-{{-   if (hasKey $db "partitions") -}}
-{{-     if ge (len $db.partitions) 1 -}}
-{{-       range $partition := $db.partitions -}}
-{{-         $partitionSource := required "partition source is required" $partition.source -}}
-{{-         $partitionSink := required "partition sink is required" $partition.sink -}}
-{{-         $partitionConnectorName := lower (printf "%s-%s" $dbConnectorName $partitionSink) | replace "." "-" -}}
-{{-         $partitionSlotName := $partitionConnectorName | replace "-" "_" -}}
+{{-   if (hasKey $db "partitions") }}
+{{-     if ge (len $db.partitions) 1 }}
+{{-       range $partition := $db.partitions }}
+{{-         $partitionSource := required "partition source is required" $partition.source }}
+{{-         $partitionSink := required "partition sink is required" $partition.sink }}
+{{-         $partitionConnectorName := lower (printf "%s-%s" $dbConnectorName $partitionSink) | replace "." "-" }}
+{{-         $partitionSlotName := $partitionConnectorName | replace "-" "_" }}
 ---
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaConnector
@@ -99,10 +100,10 @@ spec:
     transforms.reroute.type: io.debezium.transforms.ByLogicalTableRouter
     transforms.reroute.topic.regex: "^([^\\.]+)\\.([^\\.]+)\\..*"
     transforms.reroute.topic.replacement: "cdc.$1.$2.{{ $partitionSink }}"
-{{-       end -}}
-{{-     end -}}
-{{-   end -}}
-{{- end -}}
+{{-       end }}
+{{-     end }}
+{{-   end }}
+{{- end }}
 
 ---
 apiVersion: kafka.strimzi.io/v1beta2
