--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -7,7 +7,7 @@ util:
   image:
     repository: nephelaiio/dataplane-util
     pullPolicy: IfNotPresent
-    tag: dataplane-0.1.12
+    tag: dataplane-0.1.13
   resources: {}
 
 cdc:
@@ -15,7 +15,7 @@ cdc:
   #  postgres:
   #    - hostname: "network.hostname"
   #      port: 5432
-  #      servername: "host.identifier"
+  #      id: "dbId"
   #      dbname: "sourcedb"
   #      signaling: "signaling_table"
   #      partitions:
@@ -45,7 +45,7 @@ strimzi:
   connect:
     image:
       repository: nephelaiio/dataplane-connect
-      tag: dataplane-0.1.12
+      tag: dataplane-0.1.13
     replicas: 1
     config:
       group.id: connect-cluster
@@ -100,7 +100,7 @@ metabase:
     image:
       repository: nephelaiio/dataplane-util
       pullPolicy: IfNotPresent
-      tag: dataplane-0.1.12
+      tag: dataplane-0.1.13
     securityContext: {}
 
   image:
