--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -90,9 +90,11 @@ provisioner:
               postgres:
                 - hostname: "{{ dataplane_pagila_team }}-{{ dataplane_pagila_db }}"
                   port: 5432
-                  servername: pagila
+                  id: pagila
                   dbname: "{{ dataplane_pagila_db }}"
                   signaling: "{{ dataplane_pagila_signaling }}"
+                  exclude:
+                    - "public.staff"
                   partitions:
                     - source: "public.payment.*"
                       sink: "payment"
