--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -118,7 +118,7 @@
                 login_password: "{{ warehouse_pass }}"
                 login_host: "{{ warehouse_host }}"
               vars:
-                warehouse_tables_expected: "{{ pagila_target_tables | map('map_format', 'pagila_%s') | list }}"
+                warehouse_tables_expected: "{{ pagila_target_tables | map('map_format', 'pagila_public_%s') | list }}"
                 warehouse_tables_found: "{{ warehouse_table_query.query_result | map(attribute='table_name') | list }}"
               register: warehouse_table_query
               retries: 20
@@ -132,7 +132,7 @@
               ansible.builtin.debug:
                 msg: "table diff=[{{ ', '.join(warehouse_tables_diff) }}]"
               vars:
-                warehouse_tables_expected: "{{ pagila_target_tables| map('map_format', 'pagila_%s') | list }}"
+                warehouse_tables_expected: "{{ pagila_target_tables| map('map_format', 'pagila_public_%s') | list }}"
                 warehouse_tables_found: "{{ warehouse_table_query.query_result | map(attribute='table_name') | list }}"
                 warehouse_tables_diff_expected: "{{ warehouse_tables_expected | difference(warehouse_tables_found) }}"
                 warehouse_tables_diff_found: "{{ warehouse_tables_found | difference(warehouse_tables_expected) }}"
@@ -168,7 +168,7 @@
               {{ warehouse_table_records }}/{{ source_table_records }} found"
           vars:
             warehouse_table_records: "{{ (warehouse_data[warehouse_table].query_result | list)[0].count }}"
-            warehouse_table: "pagila_{{ item }}"
+            warehouse_table: "pagila_public_{{ item }}"
             source_table: "{{ item }}"
             source_table_records: "{{ (pagila_data[source_table].query_result | list)[0].count }}"
           loop_control:
