--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -94,9 +94,10 @@ provisioner:
                   dbname: "{{ dataplane_pagila_db }}"
                   signaling: "{{ dataplane_pagila_signaling }}"
                   exclude:
-                    - "public.staff"
+                    - "public\\.staff"
+                    - "debezium\\..*"
                   partitions:
-                    - source: "public.payment.*"
+                    - source: "public\\.payment\\.*"
                       sink: "payment"
             strimzi:
               connect:
