Add schema names to sink tables (#39)
* Add schema names to sink tables

* Exclude debezium schema from replication tests

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -95,6 +95,7 @@ provisioner:
                   signaling: "{{ dataplane_pagila_signaling }}"
                   exclude:
                     - "public.staff"
+                    - "debezium.*"
                   partitions:
                     - source: "public.payment.*"
                       sink: "payment"
