--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -156,6 +156,22 @@
             - name: fail verification
               ansible.builtin.fail:
 
+        - name: validate kafka connector name
+          ansible.builtin.fail:
+            msg: "connector dataplane-connector was not fuond"
+          vars:
+            connector_matches: "{{ connector_query | selectattr('metadata.name', 'equalto', 'dataplane-connector') | length }}"
+            connector_query: "{{
+              query(
+                'kubernetes.core.k8s',
+                kind='KafkaConnector',
+                kubeconfig=k8s_kubeconfig
+              ) }}"
+          retries: 10
+          delay: 30
+          until: connector_matches > 0
+          failed_when: connector_matches == 0
+
         - name: wait for cdc to complete
           pause:
             minutes: 5
