Fix connector name verification logic

--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -8,10 +8,7 @@
 {{-   $exclude := list }}
 {{-   $include := list }}
 
-{{-   $dbConnector := $dbId }}
-{{-   if hasKey $db "connector" }}
-{{-     $dbConnector := $db.connector }}
-{{-   end}}
+{{-   $dbConnector := $db.connector | default $dbId }}
 {{-   $dbConnectorName := lower $dbConnector | replace "." "-" }}
 
 {{-   if and (hasKey $db "exclude") (hasKey $db "include") }}
