--- a/values.minimal.yml
+++ b/values.minimal.yml
@@ -9,6 +9,7 @@ metabase:
 cdc:
   postgres:
     - hostname: pagilahost
+      connector: pagila-connector
       id: pagila
       dbname: pagila
       exclude:
