--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -91,6 +91,7 @@ provisioner:
                 - hostname: "{{ dataplane_pagila_team }}-{{ dataplane_pagila_db }}"
                   port: 5432
                   id: pagila
+                  connector: pagila-connector
                   dbname: "{{ dataplane_pagila_db }}"
                   signaling: "{{ dataplane_pagila_signaling }}"
                   exclude:
