--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -156,6 +156,22 @@
             - name: fail verification
               ansible.builtin.fail:
 
+        - name: validate kafka connector name
+          ansible.builtin.fail:
+            msg: "connector dataplane-connector was not found"
+          vars:
+            connector_matches: "{{ connector_query | selectattr('metadata.name', 'equalto', 'pagila-connector') | length }}"
+            connector_present: "{{ connector_matches | int > 0 }}"
+            connector_query: "{{
+              query(
+                'kubernetes.core.k8s',
+                api_version='',
+                kind='KafkaConnector',
+                kubeconfig=k8s_kubeconfig
+              ) }}"
+          until: connector_present
+          failed_when: not connector_present
+
         - name: wait for cdc to complete
           pause:
             minutes: 5
